@@ -9,3 +9,6 @@ FBCALL double       fb_CVDFROMLONGINT   ( long long l );
 FBCALL float        fb_CVSFROML         ( int l );
 FBCALL int          fb_CVLFROMS         ( float f );
 FBCALL long long    fb_CVLONGINTFROMD   ( double d );
+
+FBCALL int fb_IntLog10_32 ( unsigned int x );
+FBCALL int fb_IntLog10_64 ( unsigned long long x );
